update: Enhance induction variable optimization and code motion
Added LoopClosedFormOptimization pass to the compiler. Refactored InductionVariableOptimization to support derived induction variables, strength reduction, and linear function test replacement (LFTR). Improved loop invariant code motion with cleaner type checks and minor logic simplifications.